--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -20,16 +20,24 @@
     showSCSS = false
     purgeHTMLComments = false
 
+# toml-docs-start docs
 [docs]
     github = "https://github.com/gethinode/hinode"
     release = "https://github.com/gethinode/hinode/releases/tag/"
     checkVersion = false
+# toml-docs-end docs
 
 [home]
     # sections = ["posts"]
     fullCover = false
     centerHeadline = false
     style = ""
+    [home.feature]
+        orientation = "horizontal"
+        color = "primary"
+        width = 4
+        align = "start"
+# toml-docs-end home
 
 [navigation]
     anchor = true
