--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "cssnano": "^7.0.6",
     "cssnano-preset-advanced": "^7.0.6",
     "hugo-bin": "0.131.1",
-    "purgecss-whitelister": "^2.4.0"
+    "purgecss-whitelister": "^2.4.0",
+    "tinacms": "^2.2.9"
   },
   "devDependencies": {
     "@gethinode/netlify-plugin-dartsass": "^0.3.0",
+    "@tinacms/cli": "^1.6.9",
+    "@types/node": "^22.7.5",
     "eslint": "^9.9.1",
-    "neostandard": "^0.11.4",
     "markdownlint-cli2": "^0.14.0",
+    "neostandard": "^0.11.4",
     "netlify-plugin-hugo-cache-resources": "^0.2.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^11.0.0",
