--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -109,3 +109,5 @@ home = ["HTML", "RSS", "REDIR"]
     target = "assets/config/netlify.toml"
   [[module.imports]]
     path = "github.com/gethinode/hinode"
+  [[module.imports]]
+    path = "github.com/HugoBlox/hugo-blox-builder/modules/blox-plugin-decap-cms"
